[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["masterov01 <emailtoomer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
